# claude-plugins

./: README.md
plugins/doorstop-spec-driven-plugin/: .mcp.json  README.md  pyproject.toml
plugins/doorstop-spec-driven-plugin/.claude-plugin/: plugin.json
plugins/doorstop-spec-driven-plugin/agents/: sdd-advisor.md
plugins/doorstop-spec-driven-plugin/hooks/: block-doorstop-cli.sh  hooks.json  session-start-status.sh
plugins/doorstop-spec-driven-plugin/references/: common_rules.md
plugins/doorstop-spec-driven-plugin/references/concepts/: commit_convention.md
plugins/doorstop-spec-driven-plugin/scripts/: mcp_server.py  publish_docs.py
plugins/doorstop-spec-driven-plugin/scripts/core/: __init__.py
plugins/doorstop-spec-driven-plugin/scripts/mcp_server/: __init__.py  _adapter.py  baseline_tools.py  doorstop_tools.py  glossary_tools.py  impact_tools.py  trace_tools.py  validate_tools.py
plugins/doorstop-spec-driven-plugin/scripts/reporting/: html_builder.py
plugins/doorstop-spec-driven-plugin/skills/_shared/: rules.md
plugins/doorstop-spec-driven-plugin/skills/adopt/: SKILL.md
plugins/doorstop-spec-driven-plugin/skills/adr/: SKILL.md
plugins/doorstop-spec-driven-plugin/skills/bugfix/: SKILL.md
plugins/doorstop-spec-driven-plugin/skills/change/: SKILL.md
plugins/doorstop-spec-driven-plugin/skills/conventions/: SKILL.md
plugins/doorstop-spec-driven-plugin/skills/init/: SKILL.md
plugins/doorstop-spec-driven-plugin/tests/: conftest.py  test_common.py  test_glossary.py  test_impact_analysis.py
plugins/doorstop-spec-driven/scripts/: pyproject.toml
(+140 files in other folders)
