[project]
name = "doorstop-spec-driven-plugin"
version = "1.0.0"
description = "仕様駆動開発（Specification-Driven Development）プラグイン"
requires-python = ">=3.10"
dependencies = ["doorstop", "mcp[cli]"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["scripts/core", "scripts", "tests"]
addopts = "-v --tb=short"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
]
