[project]
name = "doorstop-spec-driven-plugin"
version = "1.0.0"
description = "仕様駆動開発（Specification-Driven Development）プラグイン"
requires-python = ">=3.10"
dependencies = ["doorstop", "mcp[cli]"]

[project.scripts]
sdd-mcp = "doorstop_spec_driven.mcp_server.serve_mcp:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "src/doorstop_spec_driven", "tests"]
addopts = "-v --tb=short"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
]

[tool.pyright]
venv = ".venv"
venvPath = "."

[tool.uv]
default-groups = []

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["doorstop_spec_driven*"]
